Update texts, fix rain and snow containers alignment

--- a/src/style.css
+++ b/src/style.css
@@ -234,10 +234,6 @@ svg {
 .windSpeed {
   align-self: flex-end;
 }
-.rain1hCont {
-  align-items: space-between;
-}
-
 /* containers opacity background */
 main > section > section,
 .dayContainer {
